# sequential-line-search

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODING_GUIDELINE.md  Doxyfile  LICENSE  README.md  setup.py
.github/workflows/: build-test.yml  macos-python.yml  macos.yml  ubuntu-python.yml  ubuntu.yml
bayesian_optimization_1d/: CMakeLists.txt  core.h
bayesian_optimization_1d_gui/: CMakeLists.txt  bayesian_optimization_1d_gui.pro  core.cpp
bayesian_optimization_2d_gui/: CMakeLists.txt  bayesian_optimization_2d_gui.pro  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.ui  widgetei.cpp  widgetmu.cpp  widgetsigma.cpp
cmake/: FindNLopt.cmake
common/: nloptutility.cpp  nloptutility.h  preferenceregressor.h  slicesampler.h  slider.h  sliderutility.cpp  sliderutility.h  timer.h  utility.cpp  utility.h
demos/bayesian_optimization_1d/: CMakeLists.txt  core.cpp  core.h  main.cpp
demos/bayesian_optimization_1d_gui/: CMakeLists.txt  core.cpp  core.h  mainwidget.cpp  mainwidget.h  mainwidget.hpp  mainwindow.cpp  mainwindow.ui
demos/bayesian_optimization_2d_gui/: CMakeLists.txt  core.cpp  core.h  core.hpp  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
demos/preferential_bayesian_optimization_1d_gui/: CMakeLists.txt  core.cpp  core.hpp  mainwidget.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
demos/sequential_line_search_2d_gui/: CMakeLists.txt  core.cpp  core.h  core.hpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  widgetpreview.cpp  widgetpreview.h  widgetpreview.hpp
demos/sequential_line_search_6d_photo/: CMakeLists.txt  colorutility.cpp  colorutility.h  core.cpp  directoryutility.h  drawutility.cpp  drawutility.h  imagemodifier.cpp  imagemodifier.h  mainwidget.cpp  mainwindow.cpp  previewwidget.cpp  previewwidget.h  widgetei.cpp  widgetmu.cpp  widgetsigma.cpp  widgetsigma.h
demos/sequential_line_search_6d_photo/data/: README.md
demos/sequential_line_search_6d_photo/resources/shaders/: enhance.fsh  enhance.vsh
demos/sequential_line_search_nd/: CMakeLists.txt  core.cpp  core.h  main.cpp
demos/sequential_line_search_photo/: CMakeLists.txt  core.cpp  core.h  directoryutility.h  drawutility.cpp  drawutility.h  imagemodifier.cpp  imagemodifier.hpp  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui  previewwidget.cpp  widgetei.cpp  widgetei.h  widgetmu.cpp  widgetmu.h
demos/sequential_line_search_photo/resources/data/: README.md
include/sequential-line-search/: acquisition-function.h  acquisition-function.hpp  current-best-selection-strategy.hpp  data.h  gaussian-process-regressor.h  gaussian-process-regressor.hpp  gaussianprocessregressor.h  kernel-type.hpp  preference-data-manager.h  preference-data-manager.hpp  preference-regressor.h  preference-regressor.hpp  preference.h  preference.hpp  preferenceregressor.h  preferential-bayesian-optimizer.hpp  regressor.h  regressor.hpp  sequential-line-search.h  sequential-line-search.hpp  slider.h  slider.hpp  sliderutility.h  utility.h  utils.h  utils.hpp
main/: colorutility.cpp  drawutility.cpp  drawutility.h  expectedimprovementmaximizer.cpp  gaussianprocessregressor.cpp  gaussianprocessregressor.h  preferenceregressor.cpp  timer.cpp
python/: CMakeLists.txt  pySequentialLineSearch.cpp
python-examples/: acquisition-func-comparison.py  custom-initial-slider.py  kernel-comparison.py  map-vs-fixed-hyperparams.py  pairwise-comparison-query.py  simple.py  test.py
sequential_line_search/: CMakeLists.txt  acquisition-function.cpp  core.cpp  core.h  expectedimprovementmaximizer.cpp  expectedimprovementmaximizer.h  gaussianprocessregressor.cpp  gaussianprocessregressor.h  nloptutility.cpp  nloptutility.h  preferenceregressor.cpp  regressor.cpp  regressor.h  slicesampler.cpp  slider.cpp  sliderutility.cpp  sliderutility.h  utility.cpp  utility.h
sequential_line_search_2d_gui/: CMakeLists.txt  core.cpp  core.h  mainwidget.cpp  mainwindow.cpp  mainwindow.h  sequential_line_search_2d_gui.pro  widgetpreview.cpp  widgetpreview.h
sequential_line_search_core/: CMakeLists.txt  expectedimprovementmaximizer.h  preferenceregressor.h  utility.cpp
src/: acquisition-function.cpp  data.cpp  gaussian-process-regressor.cpp  gaussianprocessregressor.cpp  preference-data-manager.cpp  preference-regressor.cpp  preferenceregressor.cpp  preferential-bayesian-optimizer.cpp  regressor.cpp  sequential-line-search.cpp  slider.cpp  sliderutility.cpp  utility.cpp  utils.cpp
